--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shut the Box 3D Bo3 (1–10) · v1.7</title>
+  <title>Shut the Box 3D Bo3 (1–10) · v1.8</title>
 
   <style>
     :root{
@@ -25,11 +25,14 @@
 
       --diceSize: 58px;
 
-      /* FICHAS: prisma 3D vertical */
-      --tileW: 66px;     /* ancho */
-      --tileH: 118px;    /* alto (vertical) */
-      --tileD: 24px;     /* profundidad (espesor REAL) */
+      /* FICHAS (verticales tipo dominó) */
+      --tileW: 66px;
+      --tileH: 118px;
       --radius: 16px;
+
+      /* “Espesor” visual (borde derecho + inferior) */
+      --edge: 16px;          /* cuánto “sale” el borde */
+      --edgeSkew: -18deg;    /* inclinación para perspectiva */
     }
 
     body{ margin:0; background:var(--bg); color:var(--fg); }
@@ -177,7 +180,6 @@
       display:grid;
       gap: 12px;
       margin-top: 10px;
-      perspective: 1200px;
       grid-template-columns: repeat(4, var(--tileW));
       justify-content: center;
     }
@@ -188,97 +190,46 @@
       .grid{ grid-template-columns: repeat(10, var(--tileW)); }
     }
 
-    /* ===== FICHA PRISMA 3D (6 CARAS) ===== */
+    /* ===== FICHAS: extrusión visible (borde derecho + inferior) ===== */
     .tile3d{
       width: var(--tileW);
       height: var(--tileH);
       position: relative;
-      transform-style: preserve-3d;
       user-select:none;
       touch-action: manipulation;
       -webkit-tap-highlight-color: transparent;
       transition: transform 140ms ease, filter 140ms ease, opacity 140ms ease;
-      filter: drop-shadow(0 18px 26px rgba(0,0,0,0.50));
+      filter: drop-shadow(0 18px 26px rgba(0,0,0,0.55));
+      transform-origin: center bottom;
     }
     .tile3d:active{ transform: translateY(1px); }
 
-    .prism{
+    .tileCard{
       position:absolute;
       inset:0;
-      transform-style: preserve-3d;
-
-      /* Vista 3D constante */
-      transform: rotateX(12deg) rotateY(-18deg);
-      transition: transform 220ms ease;
-    }
-    .tile3d.selected .prism{
-      transform: rotateX(12deg) rotateY(-18deg) translateZ(2px);
-    }
-
-    .pface{
-      position:absolute;
       border-radius: var(--radius);
-      border: 1px solid rgba(255,255,255,0.14);
-      backface-visibility: hidden;
-    }
-
-    /* Dimensiones útiles */
-    /* half-depth */
-    .front { inset:0; transform: translateZ(calc(var(--tileD)/2)); }
-    .back  { inset:0; transform: rotateY(180deg) translateZ(calc(var(--tileD)/2)); }
-
-    .left{
-      top:0; bottom:0;
-      width: var(--tileD);
-      left: calc((var(--tileD) / -2));
-      transform: rotateY(-90deg) translateZ(calc(var(--tileW)/2));
-      border-radius: 14px;
-    }
-    .right{
-      top:0; bottom:0;
-      width: var(--tileD);
-      right: calc((var(--tileD) / -2));
-      transform: rotateY(90deg) translateZ(calc(var(--tileW)/2));
-      border-radius: 14px;
-    }
-    .top{
-      left:0; right:0;
-      height: var(--tileD);
-      top: calc((var(--tileD) / -2));
-      transform: rotateX(90deg) translateZ(calc(var(--tileH)/2));
-      border-radius: 14px;
-    }
-    .bottom{
-      left:0; right:0;
-      height: var(--tileD);
-      bottom: calc((var(--tileD) / -2));
-      transform: rotateX(-90deg) translateZ(calc(var(--tileH)/2));
-      border-radius: 14px;
-    }
-
-    /* Material (front) */
-    .front{
       background: linear-gradient(180deg, var(--accentSoft2), rgba(255,255,255,0.06));
-      border-color: var(--accentLine);
+      border: 1px solid var(--accentLine);
       box-shadow:
         inset 0 14px 26px rgba(255,255,255,0.08),
         inset 0 -18px 26px rgba(0,0,0,0.38);
-      overflow:hidden;
-      display:flex; align-items:center; justify-content:center;
-      font-weight: 950;
-      font-size: 26px;
-      letter-spacing: .2px;
+      overflow: visible; /* clave para ver el borde que “sale” */
     }
-    .front::before{
+
+    /* brillo diagonal como material */
+    .tileCard::after{
       content:"";
       position:absolute;
       inset:-45%;
-      background: linear-gradient(120deg, rgba(255,255,255,0.22), rgba(255,255,255,0.04), rgba(255,255,255,0));
+      background: linear-gradient(120deg, rgba(255,255,255,0.22), rgba(255,255,255,0.05), rgba(255,255,255,0));
       transform: translateX(-28%) rotate(10deg);
       opacity: .55;
       pointer-events:none;
+      border-radius: 999px;
     }
-    .bevel{
+
+    /* borde interno (bevel) */
+    .tileBevel{
       position:absolute;
       inset: 3px;
       border-radius: calc(var(--radius) - 4px);
@@ -288,43 +239,63 @@
       pointer-events:none;
     }
 
-    /* Material (sides) */
-    .back{
-      background: rgba(255,255,255,0.06);
-      border-color: rgba(255,255,255,0.12);
-      box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
+    /* >>> ESTE ES EL “ESPESOR” VISIBLE A LA DERECHA <<< */
+    .tileEdgeRight{
+      position:absolute;
+      top: 6px;
+      bottom: 10px;
+      right: calc(-1 * var(--edge));
+      width: var(--edge);
+      border-radius: 12px;
+      background: linear-gradient(180deg,
+        rgba(255,255,255,0.08),
+        rgba(0,0,0,0.75)
+      );
+      border: 1px solid rgba(255,255,255,0.10);
+      border-left: none;
+      transform: skewY(var(--edgeSkew));
+      transform-origin: left center;
+      box-shadow:
+        inset 0 0 0 1px rgba(0,0,0,0.35),
+        0 10px 14px rgba(0,0,0,0.30);
+      pointer-events:none;
     }
 
-    .left{
-      background: linear-gradient(180deg,
-        rgba(255,255,255,0.10),
-        rgba(0,0,0,0.62)
-      );
-      filter: brightness(.92);
-    }
-    .right{
-      background: linear-gradient(180deg,
-        rgba(255,255,255,0.07),
-        rgba(0,0,0,0.70)
-      );
-      filter: brightness(.78);
-    }
-    .top{
+    /* borde inferior sutil (mejora mucho el “bloque”) */
+    .tileEdgeBottom{
+      position:absolute;
+      left: 10px;
+      right: 12px;
+      bottom: calc(-1 * var(--edge));
+      height: var(--edge);
+      border-radius: 0 0 14px 14px;
       background: linear-gradient(90deg,
-        rgba(255,255,255,0.09),
-        rgba(0,0,0,0.62)
+        rgba(255,255,255,0.06),
+        rgba(0,0,0,0.78)
       );
-      filter: brightness(.90);
-    }
-    .bottom{
-      background: linear-gradient(90deg,
-        rgba(255,255,255,0.05),
-        rgba(0,0,0,0.76)
-      );
-      filter: brightness(.70);
+      border: 1px solid rgba(255,255,255,0.10);
+      border-top: none;
+      transform: skewX(calc(-1 * var(--edgeSkew)));
+      transform-origin: left top;
+      box-shadow:
+        inset 0 0 0 1px rgba(0,0,0,0.35),
+        0 14px 18px rgba(0,0,0,0.32);
+      pointer-events:none;
     }
 
-    .tile3d.selected .front{
+    .tileNum{
+      position:absolute;
+      inset:0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight: 950;
+      font-size: 26px;
+      letter-spacing: .2px;
+      z-index: 2;
+    }
+
+    .tile3d.selected .tileCard{
       box-shadow:
         0 0 0 3px color-mix(in oklab, var(--accent) 70%, transparent),
         inset 0 14px 26px rgba(255,255,255,0.08),
@@ -338,7 +309,6 @@
     /* Animación tumbar */
     .tile3d.closing{
       animation: tileFall 380ms ease-out forwards;
-      transform-origin: center bottom;
     }
     @keyframes tileFall{
       0% { transform: rotateX(0deg) translateY(0); }
@@ -351,13 +321,6 @@
       transform: rotateX(85deg) translateY(10px);
       opacity: .55;
     }
-    .tile3d.closed .front{
-      background: linear-gradient(180deg,
-        color-mix(in oklab, var(--accent) 40%, rgba(255,255,255,0.08)),
-        rgba(255,255,255,0.05)
-      );
-      border-color: color-mix(in oklab, var(--accent) 55%, rgba(255,255,255,0.10));
-    }
 
     body.p1 { --accent: var(--p1); }
     body.p2 { --accent: var(--p2); }
@@ -368,7 +331,7 @@
 
 <body class="p1">
   <div class="app">
-    <h1>Shut the Box 3D (1–10) · 2 jugadores · Bo3 <span class="ver">v1.7</span></h1>
+    <h1>Shut the Box 3D (1–10) · 2 jugadores · Bo3 <span class="ver">v1.8</span></h1>
 
     <div class="card">
       <div class="row between">
@@ -591,13 +554,11 @@
       t.className = 'tile3d' + (st.selected.has(i) ? ' selected' : '') + (st.closed.has(i) ? ' closed' : '');
 
       t.innerHTML = `
-        <div class="prism">
-          <div class="pface front">${i}<div class="bevel"></div></div>
-          <div class="pface back"></div>
-          <div class="pface left"></div>
-          <div class="pface right"></div>
-          <div class="pface top"></div>
-          <div class="pface bottom"></div>
+        <div class="tileCard">
+          <div class="tileBevel"></div>
+          <div class="tileNum">${i}</div>
+          <div class="tileEdgeRight"></div>
+          <div class="tileEdgeBottom"></div>
         </div>
       `;
 
