--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shut the Box 3D Bo3 (1–10) · v1.8</title>
+  <title>Shut the Box 3D Bo3 (1–10) · v1.9</title>
 
   <style>
     :root{
@@ -14,10 +14,11 @@
       --p1:#ff4d4d;
       --p2:#4da3ff;
 
+      /* Se setean por turno en body.p1/body.p2 (sin color-mix) */
       --accent: var(--p1);
-      --accentSoft: color-mix(in oklab, var(--accent) 18%, rgba(255,255,255,0.04));
-      --accentSoft2: color-mix(in oklab, var(--accent) 32%, rgba(255,255,255,0.06));
-      --accentLine: color-mix(in oklab, var(--accent) 58%, rgba(255,255,255,0.10));
+      --accentSoft: rgba(255,77,77,0.18);
+      --accentSoft2: rgba(255,77,77,0.28);
+      --accentLine: rgba(255,77,77,0.60);
 
       --card: rgba(255,255,255,0.06);
       --cardLine: rgba(255,255,255,0.12);
@@ -31,8 +32,8 @@
       --radius: 16px;
 
       /* “Espesor” visual (borde derecho + inferior) */
-      --edge: 16px;          /* cuánto “sale” el borde */
-      --edgeSkew: -18deg;    /* inclinación para perspectiva */
+      --edge: 16px;
+      --edgeSkew: -18deg;
     }
 
     body{ margin:0; background:var(--bg); color:var(--fg); }
@@ -213,10 +214,9 @@
       box-shadow:
         inset 0 14px 26px rgba(255,255,255,0.08),
         inset 0 -18px 26px rgba(0,0,0,0.38);
-      overflow: visible; /* clave para ver el borde que “sale” */
+      overflow: visible;
     }
 
-    /* brillo diagonal como material */
     .tileCard::after{
       content:"";
       position:absolute;
@@ -228,7 +228,6 @@
       border-radius: 999px;
     }
 
-    /* borde interno (bevel) */
     .tileBevel{
       position:absolute;
       inset: 3px;
@@ -239,7 +238,6 @@
       pointer-events:none;
     }
 
-    /* >>> ESTE ES EL “ESPESOR” VISIBLE A LA DERECHA <<< */
     .tileEdgeRight{
       position:absolute;
       top: 6px;
@@ -261,7 +259,6 @@
       pointer-events:none;
     }
 
-    /* borde inferior sutil (mejora mucho el “bloque”) */
     .tileEdgeBottom{
       position:absolute;
       left: 10px;
@@ -297,16 +294,13 @@
 
     .tile3d.selected .tileCard{
       box-shadow:
-        0 0 0 3px color-mix(in oklab, var(--accent) 70%, transparent),
+        0 0 0 3px rgba(255,255,255,0.12),
+        0 0 0 5px var(--accentLine),
         inset 0 14px 26px rgba(255,255,255,0.08),
         inset 0 -18px 26px rgba(0,0,0,0.38);
-      background: linear-gradient(180deg,
-        color-mix(in oklab, var(--accent) 55%, rgba(255,255,255,0.10)),
-        rgba(255,255,255,0.06)
-      );
+      background: linear-gradient(180deg, rgba(255,255,255,0.08), rgba(255,255,255,0.06));
     }
 
-    /* Animación tumbar */
     .tile3d.closing{
       animation: tileFall 380ms ease-out forwards;
     }
@@ -322,8 +316,19 @@
       opacity: .55;
     }
 
-    body.p1 { --accent: var(--p1); }
-    body.p2 { --accent: var(--p2); }
+    /* === IMPORTANTE: aquí se cambian TODAS las variables del tema por jugador === */
+    body.p1{
+      --accent: var(--p1);
+      --accentSoft: rgba(255,77,77,0.18);
+      --accentSoft2: rgba(255,77,77,0.28);
+      --accentLine: rgba(255,77,77,0.60);
+    }
+    body.p2{
+      --accent: var(--p2);
+      --accentSoft: rgba(77,163,255,0.18);
+      --accentSoft2: rgba(77,163,255,0.28);
+      --accentLine: rgba(77,163,255,0.62);
+    }
 
     .footer{ font-size:12px; opacity:.72; margin-top:10px; }
   </style>
@@ -331,7 +336,7 @@
 
 <body class="p1">
   <div class="app">
-    <h1>Shut the Box 3D (1–10) · 2 jugadores · Bo3 <span class="ver">v1.8</span></h1>
+    <h1>Shut the Box 3D (1–10) · 2 jugadores · Bo3 <span class="ver">v1.9</span></h1>
 
     <div class="card">
       <div class="row between">
