--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shut the Box 3D Bo3 (1–10) · v2.0</title>
+  <title>Shut the Box 3D Bo3 (1–10) · v2.1</title>
 
   <style>
     :root{
@@ -223,7 +223,7 @@
       box-shadow:
         inset 0 14px 26px rgba(255,255,255,0.08),
         inset 0 -18px 26px rgba(0,0,0,0.38);
-      overflow: hidden; /* CLAVE: evita sombras raras fuera */
+      overflow: hidden;
     }
 
     /* Brillo contenido (no se sale de la ficha) */
@@ -231,8 +231,8 @@
       position:absolute;
       inset:-10% -30%;
       background: linear-gradient(120deg,
-        rgba(255,255,255,0.18),
-        rgba(255,255,255,0.06),
+        rgba(255,255,255,0.16),
+        rgba(255,255,255,0.05),
         rgba(255,255,255,0)
       );
       transform: translateX(-18%) rotate(10deg);
@@ -250,46 +250,43 @@
       pointer-events:none;
     }
 
+    /* ✅ SIN BORDE / SIN SOMBRA: elimina el contorno negro claro */
     .tileEdgeRight{
       position:absolute;
-      top: 6px;
-      bottom: 10px;
+      top: 8px;
+      bottom: 12px;
       right: calc(-1 * var(--edge));
       width: var(--edge);
       border-radius: 12px;
       background: linear-gradient(180deg,
-        rgba(255,255,255,0.08),
-        rgba(0,0,0,0.75)
+        rgba(255,255,255,0.04),
+        rgba(0,0,0,0.52)
       );
-      border: 1px solid rgba(255,255,255,0.10);
-      border-left: none;
+      border: none;
+      box-shadow: none;
       transform: skewY(var(--edgeSkew));
       transform-origin: left center;
-      box-shadow:
-        inset 0 0 0 1px rgba(0,0,0,0.35),
-        0 10px 14px rgba(0,0,0,0.30);
       pointer-events:none;
+      opacity: .85;
     }
 
     .tileEdgeBottom{
       position:absolute;
-      left: 10px;
-      right: 12px;
+      left: 12px;
+      right: 14px;
       bottom: calc(-1 * var(--edge));
       height: var(--edge);
       border-radius: 0 0 14px 14px;
       background: linear-gradient(90deg,
-        rgba(255,255,255,0.06),
-        rgba(0,0,0,0.78)
+        rgba(255,255,255,0.03),
+        rgba(0,0,0,0.56)
       );
-      border: 1px solid rgba(255,255,255,0.10);
-      border-top: none;
+      border: none;
+      box-shadow: none;
       transform: skewX(calc(-1 * var(--edgeSkew)));
       transform-origin: left top;
-      box-shadow:
-        inset 0 0 0 1px rgba(0,0,0,0.35),
-        0 14px 18px rgba(0,0,0,0.32);
       pointer-events:none;
+      opacity: .85;
     }
 
     .tileNum{
@@ -348,7 +345,7 @@
 
 <body class="p1">
   <div class="app">
-    <h1>Shut the Box 3D (1–10) · 2 jugadores · Bo3 <span class="ver">v2.0</span></h1>
+    <h1>Shut the Box 3D (1–10) · 2 jugadores · Bo3 <span class="ver">v2.1</span></h1>
 
     <div class="card">
       <div class="row between">
